# python-stock-info

./: pyproject.toml
src/: main.py
src/models/: stock.py
