[tool.poetry]
name = "python-stock-info"
version = "0.1.0"
description = ""
authors = ["Evan <evanz1215@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
fake-useragent = "^1.5.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
